objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Lead Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Converted</fullName>
        </values>
        <values>
            <fullName>Closed - Not Converted</fullName>
        </values>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Open - Not Contacted</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
        <values>
            <fullName>Working - Contacted</fullName>
        </values>
        <values>
            <fullName>convert</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Affiliation__c</fullName>
        <label>Affiliation</label>
        <picklist>
            <picklistValues>
                <fullName>LFA/SC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LFSC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Anticipated_GDC__c</fullName>
        <label>Anticipated GDC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assistant__c</fullName>
        <label>Assistant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asst_Phone__c</fullName>
        <label>Asst. Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Birthday_This_Year__c</fullName>
        <formula>DATE(YEAR(DATEVALUE(NOW())),MONTH(Birthdate__c),DAY(Birthdate__c))</formula>
        <label>Birthday This Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BrokerDealer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Broker Dealer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BrokerLinc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BrokerLinc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRD_Number__c</fullName>
        <externalId>true</externalId>
        <label>CRD #</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Certifications_Section__c</fullName>
        <label>Certifications Section</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clearing_Firm__c</fullName>
        <label>Clearing Firm</label>
        <picklist>
            <picklistValues>
                <fullName>NFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pershing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cohort_Sub_Type__c</fullName>
        <label>Cohort Sub-Type</label>
        <picklist>
            <controllingField>Cohort_Type__c</controllingField>
            <picklistValues>
                <fullName>Financial Planners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Gatherers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Planners</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cohort_Type__c</fullName>
        <label>Cohort Type</label>
        <picklist>
            <picklistValues>
                <fullName>Investment Oriented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Oriented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balanced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <picklist>
            <controllingField>Affiliation__c</controllingField>
            <picklistValues>
                <fullName>Alternative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brokerage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fringe Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life-Brokerage Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LFS Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LFS ABGA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LFS GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABGA - Life Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA - Life Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Convert_Household__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Convert Household</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currently_Contracted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Currently Contracted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DBA_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to account. Filter DBA accounts.</description>
        <label>DBA Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>DBA</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (DBA Name)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Days_to_Convert__c</fullName>
        <description>Days it took for the Lead to become a Prospect</description>
        <formula>IF(NOT( ISNULL(ConvertedDate )), 
        ConvertedDate -   DATEVALUE(CreatedDate), 
        0)</formula>
        <label>Days to Convert</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discreet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discreet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Solicit_Modified__c</fullName>
        <label>Do Not Solicit Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Do_not_Solicit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do not Solicit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Does_Not_Qualify__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Does Not Qualify</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eloqua_Lead_Rating__c</fullName>
        <label>Eloqua Lead Rating</label>
        <picklist>
            <picklistValues>
                <fullName>A1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estimated_Close_Date__c</fullName>
        <label>Estimated Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Former_Contact_Id__c</fullName>
        <externalId>true</externalId>
        <label>Former_Contact_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>TRIM(FirstName + &quot; &quot; + LastName)</formula>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Goes_By__c</fullName>
        <label>Goes By</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Household_Converting_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field holds user who initiated the house hold conversion.</description>
        <label>Household Converting User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Independent_Captive__c</fullName>
        <label>Independent/Captive</label>
        <picklist>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Captive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Individual_Branch__c</fullName>
        <label>Individual/Branch</label>
        <picklist>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OSJ Manager</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsLead__c</fullName>
        <formula>true</formula>
        <label>IsLead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <picklist>
            <picklistValues>
                <fullName>Admin Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broker General Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Planner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Producing Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>President</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Principal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registered Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vice President</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VP Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VP Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VP Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesaler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Activity_By__c</fullName>
        <label>Last Activity By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Activity__c</fullName>
        <formula>LastActivityDate</formula>
        <label>Last Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <label>Lead Source Detail</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Most_Recent__c</fullName>
        <label>Lead Source - Most Recent</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Sub_Type__c</fullName>
        <label>Lead Source Sub-Type</label>
        <picklist>
            <controllingField>LeadSource</controllingField>
            <picklistValues>
                <fullName>Internal Recruiter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recruiter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Recruiting Visit/Seminar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LFN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OBD RR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LFG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JoinLFN.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JoinLFN#</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>License_Certifications__c</fullName>
        <label>License &amp; Certifications</label>
        <picklist>
            <picklistValues>
                <fullName>Series 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 8,9,10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 14A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 31</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 39</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 42</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 51</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 52</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 53</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 55</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 56</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 62</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 63</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 64</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 65</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 66</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Licenses_Section__c</fullName>
        <label>Licenses Section</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Life_GDC__c</fullName>
        <description>Life GDC</description>
        <label>Life GDC $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lincoln_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lincoln Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lines_of_Authority__c</fullName>
        <label>Lines of Authority</label>
        <picklist>
            <picklistValues>
                <fullName>Accident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casualty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Annuity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Index Annuity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fraternal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Lines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Special Risks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Lines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-paid Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replacement Cost Coverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Universal Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Variable Annuity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Variable Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Variable Universal Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vatical Settlement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Whole-life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workers Compensation</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Mail_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mail Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Memberships__c</fullName>
        <label>Memberships</label>
        <picklist>
            <picklistValues>
                <fullName>AICPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDRT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAIFA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WIFS</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>NPN__c</fullName>
        <label>NPN#</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Business__c</fullName>
        <label>Other Business</label>
        <picklist>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property &amp; Casualty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pension &amp; Retirement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate Investing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mortgage Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental Properties</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Other_Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Email__c</fullName>
        <label>Other Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Other_Phone__c</fullName>
        <label>Other Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Other_Title__c</fullName>
        <inlineHelpText>When Job Title equals Other</inlineHelpText>
        <label>Other Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Communication__c</fullName>
        <label>Preferred Communication</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prelim__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prelim - Automatic Lead Conversion</description>
        <label>Prelim</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PrimaryContactOwner__c</fullName>
        <description>Hold Primary Contacts Owner Id. This field would be used to get AccountManager(Owner of primary prospect) during lead conversion process.</description>
        <label>PrimaryContactOwner</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <label>Primary</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProductInterest__c</fullName>
        <label>Product Interest</label>
        <picklist>
            <picklistValues>
                <fullName>GC1000 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5000 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3000 series</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Interests__c</fullName>
        <label>Product Interests</label>
        <picklist>
            <picklistValues>
                <fullName>Annuitites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Term Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advisory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Wealth Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Prospective_GDC__c</fullName>
        <label>Prospective GDC</label>
        <picklist>
            <picklistValues>
                <fullName>Less than $100,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$100,000 - $300,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$300,000 - $600,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$600,000 or more</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recruitment_Kit__c</fullName>
        <label>Recruitment Kit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rep_Since__c</fullName>
        <label>Rep Since</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Secondary Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_Email__c</fullName>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <label>Sub-Type</label>
        <picklist>
            <controllingField>Contract_Type__c</controllingField>
            <picklistValues>
                <fullName>APG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DPG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IFP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apprenticeship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mentor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LPG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aggregation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attorney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fingerprinted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Fingerprinted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <label>Suffix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>allLeadConvertFieldsUpdated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>allLeadConvertFieldsUpdated</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>